--- a/MasterPol/Windows/AddPartnerWindow.xaml
+++ b/MasterPol/Windows/AddPartnerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MasterPol.Windows"
         mc:Ignorable="d"
-        Title="Добавить/Редактировать партнера" Height="549" Width="600" WindowStartupLocation="CenterScreen" Icon="/Images/MasterPol.ico">
+        Title="Добавить/Редактировать партнера" Height="594" Width="600" WindowStartupLocation="CenterScreen" Icon="/Images/MasterPol.ico">
     <Grid Margin="10,10,10,10">
 
         <Grid.RowDefinitions>
@@ -15,7 +15,7 @@
 
         <StackPanel Grid.Row="0" Margin="107,10,0,10" HorizontalAlignment="Left" Width="379">
             <TextBlock Text="Название партнера:"/>
-            <TextBox x:Name="NameTextBox"/>
+            <ComboBox x:Name="ExistingPartnersComboBox"/>
 
             <TextBlock Text="Тип партнера:" Margin="0,10,0,0"/>
             <ComboBox x:Name="TypeComboBox"/>
@@ -24,10 +24,10 @@
             <TextBox x:Name="RatingTextBox"/>
 
             <TextBlock Text="Адрес:" Margin="0,10,0,0"/>
-            <TextBox x:Name="AddressTextBox" Height="59"/>
+            <TextBox x:Name="AddressTextBox" Height="25" UndoLimit="50"/>
 
             <TextBlock Text="Директор:" Margin="0,10,0,0"/>
-            <TextBox x:Name="DirectorTextBox"/>
+            <ComboBox x:Name="DirectorComboBox"/>
 
             <TextBlock Text="Телефон:" Margin="0,10,0,0"/>
             <TextBox x:Name="PhoneTextBox"/>
@@ -37,6 +37,9 @@
 
             <TextBlock Text="Email:" Margin="0,10,0,0"/>
             <TextBox x:Name="EmailTextBox"/>
+
+            <TextBlock Text="Логотип:" Margin="0,10,0,0"/>
+            <ComboBox x:Name="LogoComboBox"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
